--- a/Calculation/Views/_ViewImports.cshtml
+++ b/Calculation/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Calculation
-@using Calculation.Models
+﻿@using modal_popup_crud
+@using modal_popup_crud.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
